# PartitionSolvers

./: .gitattributes  .gitignore  CMakeLists.txt  DP.cpp  DP.hpp  DP_ex.cpp  DP_solver_demo.cpp  DP_solver_demo.hpp  DP_solver_test.cpp  DP_solver_test.hpp  Experiment_0.py  Experiment_0a.py  Experiment_1.py  Experiment_1a.py  Experiment_1b.py  Experiment_2.py  Experiment_2a.py  Experiment_3.py  Experiment_3a.py  Experiment_4.py  Experiment_4_process.py  Experiment_4_prop_process.py  Experiment_4a.py  Experiment_4a_prop.py  InductiveGBoost.py  LTSS.cpp  LTSS.hpp  LTSS_solver_demo.cpp  LTSS_solver_test.cpp  LTSS_solver_test.hpp  NYBCData.py  Presentation.odp  README.md  SimulatedExperiments.py  Solver_dbn.py  Solver_ex.py  classifier.py  data_anal.py  gtest_all.cpp  optimal_t_studies.py  (+26 more)
NYS_data/: NYC cancer mapping.ipynb
NYS_data/.ipynb_checkpoints/: NYC cancer mapping-checkpoint.ipynb
src/cpp/: CMakeLists.txt  DP.cpp  DP_solver_demo.cpp  LTSS.cpp  LTSS_solver_demo.cpp  gtest_all.cpp  proto.i  python_dpsolver.cpp  python_ltsssolver.cpp  score.cpp  solver_timer.cpp
src/cpp/benchmark/: CMakeLists.txt  benchmarks.cpp
src/cpp/include/: DP.hpp  DP_impl.hpp  LTSS.hpp  LTSS_impl.hpp  python_dpsolver.hpp  score.hpp  score_impl.hpp
src/cpp/test/: CMakeLists.txt  gtest_all.cpp
src/python/: SimulatedExperiments.py  plot_times.py  render_NYC_tract_cancer.py  render_cluster_preds.py  solverSWIG_DP.py  solverSWIG_LTSS.py  solver_ex.py  solver_tests.py  test_splits.py
src/scripts/: runTimeGraphs.sh
